[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Textures/Objects/DoorUnlocked.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/Door.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/Sfx/door.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/Sfx/door_go.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 141, 231.5 )

[node name="Door" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0.5 )
shape = SubResource( 1 )

[node name="door" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -2.476

[node name="door_go" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="area_entered" from="." to="." method="_on_door_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_door_area_exited"]
